--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ environment:
 
 dependencies:
 
+  dwds: ^7.1.1
+
 
 
   flutter:
@@ -33,6 +35,17 @@ dependencies:
   cupertino_icons: ^1.0.2
   marquee: ^2.1.0
   dropdownfield: ^1.0.3
+  path_provider: ^2.0.2
+  open_file: ^3.2.1
+  http: ^0.12.2
+  sqflite: ^2.0.0+3
+  path: ^1.8.0
+  firebase_core: ^1.2.0
+  cloud_firestore: ^2.2.2
+  fl_chart: ^0.36.2
+  percent_indicator: ^3.0.1
+  url_launcher: ^6.0.7
+
 
 dev_dependencies:
   flutter_test:
@@ -44,15 +57,20 @@ dev_dependencies:
 # The following section is specific to Flutter.
 flutter:
 
+
+
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
 
+
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/anamenu.png
+    - assets/egitim.jpg
+    - assets/oyun.jpg
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
